# spoof

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
code/dataset/: capture_frames.py  load_data.py
config/: baseline.yaml  config.yaml  eval.yaml  test.yaml  test_lora.yaml  train.yaml  train_lora.yaml  validate.yaml
logs/lightning_logs/version_0/: events.out.tfevents.1681918313.mac.77406.0
logs/lightning_logs/version_1/: events.out.tfevents.1681920770.mac.77844.0  hparams.yaml
logs/lightning_logs/version_2/: events.out.tfevents.1681924452.mac.79862.0  hparams.yaml
logs/lora/lcc/: lcc_lora.json
notebooks/: attn_map.ipynb  image_scores.ipynb  lora.ipynb  scores.ipynb  scratchpad.ipynb  sorted_images.csv  transforms.ipynb  visualize_attention_map.ipynb
scripts/: .train_lightning.py.un~  cfg_train_dummy.yaml  cfg_val_dummy.yaml  train_lightning.py  train_lightning.py~  validate.py
spoof/: datapipe.py  datasets.py  main.py  models.py  run.py  train.py  trainer.py  training_system.py  transforms.py  validate.py
spoof/dataset/: __init__.py  casia.py  dummy.py
spoof/loss/: __init__.py  classification.py  multiloss.py
spoof/model/: __init__.py  baseline.py  vit.py
spoof/utils/: annotations.py  collector.py  data.py  metrics.py
src/: train.py  utils.py  visualize.py
src/dataset/: add_metadata.py  capture_frames.py  casia.py  create_sample.py  extract_frames.py  read_metadata.py  rot_trf.py  transforms.py  visualize.py
src/models/: cnn.py
src/preprocessing/: casia.py  casia2.py  create_sample.py  transforms.py
src/spoof/: .training_system.py.un~  __init__.py  train.py  train_loo.py  training_system.py  training_system.py~  validate.py
src/utils/: annotations.py  extract_frames.py  gen_train_file.py
tests/: .test_config.py.un~  .test_lora.py.un~  .test_visualize.py.un~  conftest.py  model_transformer_keys.txt  test_add_metadata.py  test_capture.py  test_casia_dataset.py  test_config.py  test_config.py~  test_dataloaders.py  test_dataset.py  test_datasets.py  test_extract_frames.py  test_loo.py  test_lora.py  test_lora.py~  test_model.py  test_pipeline.py  test_training_system.py  test_transforms.py  test_visualize.py  test_visualize.py~  test_weights.py  vit_transformer_keys.txt
tests/casia/: test_create_sample.py  test_extract_frames.py  test_transforms.py  test_visualize.py
tests/sample/: test.json
tmpk2ttewhb/: _remote_module_non_scriptable.py
(+280 files in other folders)
