[metadata]
name = spoof
long_description = file: README.md
author = Orkun Ozoglu
license = MIT Licence

[options]
include_package_data = True
package_dir=
    =spoof
packages=find:
install_requires =
    torch
    torchvision
    pandas
    scikit-learn
    hydra-core
    tensorboard

[options.packages.find]
where=spoof

[options.package_data]
* = *.txt, *.md

[options.extras_require]
test =
    pytest

dev =
    black
    flake8
    isort
    pre-commit
    %(test)s
