[metadata]
name = spoof
long_description = file: README.md
author = Orkun Ozoglu
license = MIT Licence

[options]
install_requires =
    torch
    torchvision
    pandas
    scikit-learn
    hydra-core
    tensorboard


[options.extras_require]
test =
    pytest

dev =
    black
    flake8
    isort
    pre-commit
    %(test)s
