[metadata]
name = spoof
long_description = file: README.md
author = Orkun Ozoglu
license = MIT Licence

[options]
install_requires =
    torch>=1.13
    torchvision>=0.15
    pandas
    scikit-learn
    hydra-core>=1.3
    tensorboard
    opencv-python
    pytorch_lightning>=1.5.0, <=1.9.0
    opencv-python>=4.7

[options.extras_require]
test =
    pytest

dev =
    black
    flake8
    isort
    pre-commit
    %(test)s
